--- a/html/index.html
+++ b/html/index.html
@@ -29,17 +29,17 @@
 
 <body>
     <main class="grid-container">
-        <div class="grid__item bg1 w1000">1</div>
-        <div class="grid__item bg2 w500">2</div>
-        <div class="grid__item bg3 w500">3</div>
-        <div class="grid__item bg4 w500">4</div>
-        <div class="grid__item bg5 w500">5</div>
-        <div class="grid__item bg1 w500">6</div>
-        <div class="grid__item bg2 w1000">7</div>
+        <div class="grid__item bg1 w1000"></div>
+        <div class="grid__item bg2 w500"></div>
+        <div class="grid__item bg3 w500"></div>
+        <div class="grid__item bg4 w500"></div>
+        <div class="grid__item bg5 w500"></div>
+        <div class="grid__item bg1 w500"></div>
+        <div class="grid__item bg2 w1000"></div>
 
-        <div class="grid__item bg5 w1000">21</div>
-        <div class="grid__item bg3 w500">22</div>
-        <div class="grid__item bg1 w500">23</div>
+        <div class="grid__item bg5 w1000"></div>
+        <div class="grid__item bg3 w500"></div>
+        <div class="grid__item bg1 w500"></div>
         <div class="grid__item bg3">
             <img class="logo__img" src="img/ploshadka_logo.svg" alt="ploshadka.market, стройка, декор, ремонт, Ростов-на-Дону Курчатова 2а" />
         </div>
@@ -52,12 +52,12 @@
                 </p>
             </div>
         </div>
-        <div class="grid__item bg5 w500">26</div>
-        <div class="grid__item bg3 w1000">27</div>
+        <div class="grid__item bg5 w500"></div>
+        <div class="grid__item bg3 w1000"></div>
 
-        <div class="grid__item bg3 w1000">31</div>
-        <div class="grid__item bg4 w500">32</div>
-        <div class="grid__item bg2 w500">33</div>
+        <div class="grid__item bg3 w1000"></div>
+        <div class="grid__item bg4 w500"></div>
+        <div class="grid__item bg2 w500"></div>
         <div class="grid__item bg5 area_1">
             <div class="presentation">
                 <a href="Ploshadka_Rent_Presentation_008_Screen.pdf" title="скачать презентацию" class="presentation__link">
@@ -65,13 +65,13 @@
                 </a>
             </div>
         </div>
-        <div class="grid__item bg3 mobile_block500">mobile_block500</div>
+        <div class="grid__item bg3 mobile_block500"></div>
         <div class="grid__item bg1">
             <img class="crane_img" src="img/crane.jpg" alt="Кран">
         </div>
-        <div class="grid__item bg5 w1000">37</div>
+        <div class="grid__item bg5 w1000"></div>
 
-        <div class="grid__item bg4 w1000">41</div>
+        <div class="grid__item bg4 w1000"></div>
         <div class="grid__item bg3 area_2">
             <section class="contact">
                 <section class="contact__address">
@@ -88,10 +88,10 @@
                 </section>
             </section>
         </div>
-        <div class="grid__item bg4">44</div>
-        <div class="grid__item bg1">45</div>
-        <div class="grid__item bg2 w500">46</div>
-        <div class="grid__item bg4 w1000">47</div>
+        <div class="grid__item bg4"></div>
+        <div class="grid__item bg1"></div>
+        <div class="grid__item bg2 w500"></div>
+        <div class="grid__item bg4 w1000"></div>
     </main>
 
 </body>
