--- a/html/index.html
+++ b/html/index.html
@@ -15,10 +15,9 @@
     <meta property="og:title" content="ploshadka.market" />
     <meta property="og:description" content="ploshadka.market, стройка, декор, ремонт, Ростов-на-Дону Курчатова 2а" />
     <meta property="og:url" content="https://ploshadka.market/" />
-    <meta property="og:image" content="" />
-    <meta property="og:image:url" content="" />
+    <meta property="og:image" content="https://ploshadka.market/img/favicon.png" />
+    <meta property="og:image:url" content="https://ploshadka.market/img/favicon.png" />
     <meta property="og:site_name" content="ploshadka.market" />
-
 
     <title>ploshadka.market, стройка, декор, ремонт, Ростов-на-Дону Курчатова 2а</title>
     <link rel="shortcut icon" href="img/favicon.png">
