--- a/html/index.html
+++ b/html/index.html
@@ -24,6 +24,22 @@
 
     <link href="css/ploshadka.market.css" rel="stylesheet">
 
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript" >
+      (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+      (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+
+      ym(86461818, "init", {
+        clickmap:true,
+        trackLinks:true,
+        accurateTrackBounce:true,
+        webvisor:true
+      });
+    </script>
+    <noscript><div><img src="https://mc.yandex.ru/watch/86461818" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+    <!-- /Yandex.Metrika counter -->
+
 </head>
 
 <body>
@@ -40,7 +56,9 @@
         <div class="grid__item bg3 w500"></div>
         <div class="grid__item bg1 w500"></div>
         <div class="grid__item bg3">
-            <img class="logo__img" src="img/ploshadka_logo.svg" alt="ploshadka.market, стройка, декор, ремонт, Ростов-на-Дону Курчатова 2а" />
+            <div class="logo">
+                <img class="logo__img" src="img/ploshadka_logo.svg" alt="ploshadka.market, стройка, декор, ремонт, Ростов-на-Дону Курчатова 2а" />
+            </div>
         </div>
         <div class="grid__item bg2">
             <div class="logo_title">
